start teams favoite show
